--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2"
   },
   "scripts": {
