--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
   "repository": "https://github.com/janosh/ocean-artup",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "2.17.7",
-    "gatsby-image": "2.2.30",
-    "gatsby-plugin-algolia": "^0.3.4",
-    "gatsby-plugin-catch-links": "2.1.15",
-    "gatsby-plugin-google-analytics": "2.1.23",
-    "gatsby-plugin-manifest": "2.2.26",
+    "gatsby": "2.20.2",
+    "gatsby-image": "2.3.0",
+    "gatsby-plugin-algolia": "^0.5.0",
+    "gatsby-plugin-catch-links": "2.2.0",
+    "gatsby-plugin-google-analytics": "2.2.0",
+    "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-netlify-cache": "^1.1.0",
-    "gatsby-plugin-offline": "3.0.17",
-    "gatsby-plugin-react-helmet": "3.1.13",
-    "gatsby-plugin-sharp": "2.2.36",
-    "gatsby-plugin-styled-components": "3.1.11",
+    "gatsby-plugin-offline": "3.1.0",
+    "gatsby-plugin-react-helmet": "3.2.0",
+    "gatsby-plugin-sharp": "^2.5.1",
+    "gatsby-plugin-styled-components": "3.2.0",
     "gatsby-remark-embed-video": "2.0.1",
-    "gatsby-remark-images-contentful": "2.1.21",
-    "gatsby-remark-responsive-iframe": "2.2.25",
-    "gatsby-remark-smartypants": "2.1.14",
-    "gatsby-source-contentful": "2.1.54",
-    "gatsby-transformer-remark": "2.6.32",
+    "gatsby-remark-images-contentful": "^2.2.1",
+    "gatsby-remark-responsive-iframe": "2.3.0",
+    "gatsby-remark-smartypants": "2.2.0",
+    "gatsby-source-contentful": "2.2.2",
+    "gatsby-transformer-remark": "2.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^6.0.0-beta",
     "react-instantsearch-dom": "^6.0.0",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.0.1",
     "styled-icons": "^10.2.1"
   },
   "devDependencies": {
