--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-image": "2.3.0",
     "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-catch-links": "2.2.0",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-analytics": "2.2.0",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-netlify": "^2.1.23",
