--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
   "repository": "https://github.com/janosh/ocean-artup",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "2.20.2",
-    "gatsby-image": "2.3.0",
-    "gatsby-plugin-algolia": "^0.5.0",
-    "gatsby-plugin-catch-links": "2.2.0",
+    "gatsby": "2.23.3",
+    "gatsby-image": "2.4.7",
+    "gatsby-plugin-algolia": "^0.11.1",
+    "gatsby-plugin-catch-links": "2.3.5",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-google-analytics": "2.2.0",
-    "gatsby-plugin-manifest": "^2.3.1",
-    "gatsby-plugin-netlify": "^2.1.23",
+    "gatsby-plugin-google-analytics": "2.3.4",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-netlify": "^2.3.5",
     "gatsby-plugin-netlify-cache": "^1.1.0",
-    "gatsby-plugin-offline": "3.1.0",
-    "gatsby-plugin-react-helmet": "3.2.0",
-    "gatsby-plugin-sharp": "^2.5.1",
-    "gatsby-plugin-styled-components": "3.2.0",
-    "gatsby-remark-embed-video": "2.0.1",
-    "gatsby-remark-images-contentful": "^2.2.1",
-    "gatsby-remark-responsive-iframe": "2.3.0",
-    "gatsby-remark-smartypants": "2.2.0",
-    "gatsby-source-contentful": "2.2.2",
-    "gatsby-transformer-remark": "2.7.0",
+    "gatsby-plugin-offline": "3.2.9",
+    "gatsby-plugin-react-helmet": "3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-styled-components": "3.3.4",
+    "gatsby-remark-embed-video": "3.0.10",
+    "gatsby-remark-images-contentful": "^2.3.5",
+    "gatsby-remark-responsive-iframe": "2.4.5",
+    "gatsby-remark-smartypants": "2.3.4",
+    "gatsby-source-contentful": "2.3.15",
+    "gatsby-transformer-remark": "2.8.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^6.0.0-beta",
-    "react-instantsearch-dom": "^6.0.0",
+    "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.5.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.1",
     "styled-icons": "^10.2.1"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "prettier": "^1.19.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5",
     "prop-types": "^15.7.2"
   },
   "scripts": {
@@ -73,6 +74,7 @@
     "trailingComma": "es5",
     "semi": false,
     "singleQuote": true,
-    "printWidth": 88
+    "printWidth": 88,
+    "arrowParens": "avoid"
   }
 }
