--- a/package.json
+++ b/package.json
@@ -8,49 +8,45 @@
   "author": "Janosh Riebesell <janosh.riebesell@gmail.com>",
   "repository": "https://github.com/janosh/ocean-artup",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "2.23.3",
-    "gatsby-image": "2.4.7",
-    "gatsby-plugin-algolia": "^0.11.1",
-    "gatsby-plugin-catch-links": "2.3.5",
+    "babel-plugin-styled-components": "^1.11.1",
+    "gatsby": "2.24.56",
+    "gatsby-image": "2.4.17",
+    "gatsby-plugin-algolia": "^0.11.2",
+    "gatsby-plugin-catch-links": "2.3.11",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-google-analytics": "2.3.4",
-    "gatsby-plugin-manifest": "^2.4.11",
-    "gatsby-plugin-netlify": "^2.3.5",
+    "gatsby-plugin-google-analytics": "2.3.13",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-netlify": "^2.3.14",
     "gatsby-plugin-netlify-cache": "^1.1.0",
-    "gatsby-plugin-offline": "3.2.9",
-    "gatsby-plugin-react-helmet": "3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-plugin-styled-components": "3.3.4",
+    "gatsby-plugin-offline": "3.2.27",
+    "gatsby-plugin-react-helmet": "3.3.10",
+    "gatsby-plugin-sharp": "^2.6.34",
+    "gatsby-plugin-styled-components": "3.3.10",
     "gatsby-remark-embed-video": "3.0.10",
-    "gatsby-remark-images-contentful": "^2.3.5",
-    "gatsby-remark-responsive-iframe": "2.4.5",
-    "gatsby-remark-smartypants": "2.3.4",
-    "gatsby-source-contentful": "2.3.15",
-    "gatsby-transformer-remark": "2.8.15",
+    "gatsby-remark-images-contentful": "^2.3.16",
+    "gatsby-remark-responsive-iframe": "2.4.13",
+    "gatsby-remark-smartypants": "2.3.10",
+    "gatsby-source-contentful": "2.3.44",
+    "gatsby-transformer-remark": "2.8.34",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.5.0",
+    "react-instantsearch-dom": "^6.7.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1",
-    "styled-icons": "^10.2.1"
+    "styled-components": "^5.2.0",
+    "styled-icons": "^10.19.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.2.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "prettier": "^2.0.5",
+    "eslint": "^7.8.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "prettier": "^2.1.1",
     "prop-types": "^15.7.2"
   },
   "scripts": {
     "dev": "gatsby develop -o -H 0.0.0.0",
-    "serve": "gatsby build && gatsby serve -o -H 0.0.0.0",
-    "deploy": "gatsby build && netlify deploy",
-    "clean": "gatsby clean && gatsby build && gatsby serve -o -H 0.0.0.0",
-    "debugDev": "node --inspect node_modules/.bin/gatsby develop -o -H 0.0.0.0",
-    "debugProd": "node --inspect node_modules/.bin/gatsby build && gatsby serve -o -H 0.0.0.0"
+    "serve": "gatsby build && gatsby serve -o -H 0.0.0.0"
   },
   "keywords": [
     "Ocean artUp",
